bug and ui fixing